Fixed spacing in footer. Changed font to sans-serif.

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,10 +67,10 @@ p {
 }
 
 .footer {
+    font-family: Arial, Helvetica;
     font-size: 0.5em;
     text-align: center;
     padding-top: 30px;
-    font-style: italic;
     height: 1em;
     clear: both;
 }
